kubernetes/ingress/ingress-api.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /analyze
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
