kubernetes/ingress/ingress-ui.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ui
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 8080
